Update oak-store-document/src/test/java/org/apache/jackrabbit/oak/plugins/document/VersionGarbageCollectorIT.java
Co-authored-by: Rishabh Kumar <rishabhdaim1991@gmail.com>